fix align icone curtidas

--- a/styles/cards/produto/produto.css
+++ b/styles/cards/produto/produto.css
@@ -44,6 +44,11 @@
     gap: 6px;
 }
 
+.cardProduto__conteudo__curtidas__icone {
+    display: grid;
+    place-items: center;
+}
+
 .cardProduto__conteudo__info {
     display: grid;
     gap: 10px;
